# icecoldcode

./: .gitignore  README.md  deploy.sh  flake.nix  site.hs
.github/workflows/: main.yml
examples/java-spring-jwt-greetings/: .envrc  .gcloudignore  .gitignore  build.gradle  flake.nix  settings.gradle
examples/java-spring-jwt-greetings/src/main/appengine/: app.yaml
examples/java-spring-jwt-greetings/src/main/java/com/icecoldcode/: Application.java  IndexController.java
examples/java-spring-jwt-greetings/src/main/resources/: application-dev.properties
examples/java-spring-jwt-greetings/src/main/resources/static/: index.html  script.js  style.css  util.js
examples/java-spring-jwt-greetings/src/test/java/com/icecoldcode/: AuthenticatedTest.java  UnauthenticatedTest.java
src/: index.html
src/css/: default.css
src/js/: script.js
src/posts/: a-min-heap-from-scratch-in-javascript.md  developer-always-do-your-best.md  the-spread-operator-isnt-mandatory.md
src/templates/: default.html
website/: .envrc  README.md  icecoldcode.cabal
website/commands/: clean  watch
website/src/: about.html  impressum.md  index.html
website/src/css/: default.css
website/src/js/: script.js
website/src/posts/: a-few-common-statistical-distributions.md  a-greetings-application-built-with-java-spring-and-jwt.md  a-simple-rest-api-using-java-spring-and-jwt.md  better-developer-think-transformations.md  elegant-python-implementation-of-huffman-encoding.md  greetings-application-built-with-java-spring-and-jwt.md
website/src/templates/: default.html  post.html
(+30 files in other folders)
